<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".activities.PublicarPlanActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/linearLayout2"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:layout_marginTop="15dp"
            android:layout_width="220dp"
            android:layout_height="150dp"
            android:id="@+id/imageViewPublicarPlan"
            android:layout_weight="1"/>

        <ImageView
            android:layout_marginBottom="-4dp"
            android:layout_marginTop="15dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageViewCameraPublicar"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_action_name"/>

    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titulo"
            android:textSize="15dp"
            android:textStyle="bold"
            android:id="@+id/textView7" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextTituloPublicar"
            android:gravity="center"
            android:padding="5dp"
            android:minHeight="35dp"
            android:background="@drawable/fondo_editext"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/localizacion"
            android:layout_marginTop="15dp"
            android:id="@+id/textView8"
            android:textSize="15dp"
            android:textStyle="bold"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/publicarTextViewLoc"
            android:textSize="15dp"
            android:padding="5dp"
            android:layout_gravity="bottom"
            android:minHeight="35dp"
            android:background="@drawable/fondo_editext"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/fecha"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:id="@+id/textView9" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="10dp"
                    android:id="@+id/editTextFechaPublicar"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:layout_marginLeft="15dp"
                    android:minHeight="35dp"
                    android:background="@drawable/fondo_editext"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/categoria"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:id="@+id/textView15" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:maxWidth="10dp"
                    android:padding="5dp"
                    android:minHeight="35dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/fondo_editext"/>

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="15dp"
                android:text="@string/descripcion"
                android:textSize="15dp"
                android:textStyle="bold"
                android:id="@+id/textView11" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextDescripcionPublicar"
                android:textSize="13dp"
                android:gravity="left|top"
                android:padding="5dp"
                android:minHeight="70dp"
                android:background="@drawable/fondo_editext"/>

    <Button
        android:id="@+id/btnPublicarPlan"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:layout_gravity="bottom"
        android:textSize="15dp"
        android:text="@string/publicar"
        android:textColor="@color/white"
        android:background="@drawable/redondear"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</LinearLayout>



</ScrollView>
