<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".activities.PublicarPlanActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@android:color/white">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayout5"
                >


            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">



            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="220dp"
                android:layout_height="140dp"
                android:id="@+id/imageViewPublicarPlan"
                android:src="@drawable/banner"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/imageViewCameraPublicar"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_action_name"/>

        </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextTituloPublicar"
                    android:hint="@string/titulo"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:textSize="15dp"
                    android:maxLength="20"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/publicarTextViewLoc"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:hint="@string/localizacion"
                    android:padding="5dp"
                    android:layout_gravity="bottom"
                    android:minHeight="35dp"
                    android:editable="false"
                    android:layout_marginTop="5dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="10dp"
                    android:id="@+id/textViewFechaPublicar"
                    android:layout_weight="1"
                    android:hint="@string/fecha"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:editable="false"
                    android:minHeight="35dp"
                    android:layout_marginTop="5dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/categoria"
                    android:textSize="13dp"
                    android:gravity="center"
                    android:id="@+id/textView15"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:maxWidth="10dp"
                    android:padding="5dp"
                    android:minHeight="20dp"
                    android:id="@+id/spinnerCategorias" />


            </LinearLayout>

            </LinearLayout>



        </android.support.v7.widget.CardView>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextDescripcionPublicar"
            android:textSize="13dp"
            android:gravity="left|top"
            android:padding="5dp"
            android:hint="@string/escriba_descripcion"
            android:minHeight="70dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/fondo_editext"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnPublicarPlan"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/publicar"
            android:textColor="@color/white"
            android:background="@drawable/redondear"/>


    </LinearLayout>



</ScrollView>
